--- a/src/app/deporte/deporte.component.html
+++ b/src/app/deporte/deporte.component.html
@@ -1,7 +1,8 @@
-<ol>
+<ul class="list-decimal pt-5 px-8">
     <li>
-        <div>
+        <div class="flex items-center py-3">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png" alt="angular" width="50px" height="50px">
+            <h3 class="uppercase pt-3">Angular Material</h3>
         </div>
       <mat-form-field appearance="fill">
         <mat-label>¿Cual es tu nombre?</mat-label>
@@ -15,4 +16,4 @@
     <li *ngIf="deporte">
       {{name}} Tu deporte Favorito es : <i>{{deporte}}</i>
     </li>
-</ol>  
+</ul>  
